--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	
 	
 	<!-- Styles -->
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="css/index.css">
 
 	<!-- Javscript -->
 	<script>
