--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 
 	<h2></h2>
 
+	<script src="js/nfc.js"></script>
 	<script>
 		if ("serviceWorker" in navigator) {
 			window.addEventListener("load", () => {
