Fylyttade onmessage i worker.js (#31)
Co-authored-by: KalleDunderBerg <91466091+BensinBosse@users.noreply.github.com>
Co-authored-by: fluff-otto <91466040+fluff-otto@users.noreply.github.com>
Co-authored-by: BensinBosse <kallehaljerod@gmail.com>

--- a/index.html
+++ b/index.html
@@ -50,6 +50,13 @@
 
 
 
+	<script type="module" src="js/nfc.js"></script>
+	<script type="module">
+
+		import { startScanning } from "./js/nfc.js";
+
+		
+
 		if ("serviceWorker" in navigator) {
 			window.addEventListener("load", () => {
 				navigator.serviceWorker && navigator.serviceWorker.register("./sw.js");
@@ -95,6 +102,7 @@
 			};
 			
 		}
+
 
 		
 
