--- a/index.html
+++ b/index.html
@@ -81,11 +81,17 @@
 
 			var work = new Worker("./worker.js");
 			work.postMessage({ a:1});
+			document.body.style.backgroundColor = "blue";
 			work.onmessage = (evt) => { 
+				document.body.style.backgroundColor = "red";
 				if(evt.data){
+					document.body.style.backgroundColor = "yellow";
 					navigator.permissions.query({name:'nfc'}).then((result) => {
+						document.body.style.backgroundColor = "black";
 					if (result.state === 'granted') {
+						document.body.style.backgroundColor = "white";
 								if(evt.data === 1){
+									document.body.style.backgroundColor = "green";
 									startScanning();
 								}
 
