Skrev om function till async (#37)
Co-authored-by: KalleDunderBerg <91466091+BensinBosse@users.noreply.github.com>
Co-authored-by: fluff-otto <91466040+fluff-otto@users.noreply.github.com>
Co-authored-by: BensinBosse <kallehaljerod@gmail.com>

--- a/index.html
+++ b/index.html
@@ -45,7 +45,6 @@
 	<script type="module" src="js/nfc.js"></script>
 	<script type="module">
 
-
 		import { startScanning } from "./js/nfc.js";
 
 		
@@ -82,19 +81,14 @@
 			}
 
 			document.body.style.backgroundColor = "blue";
-			try{
-				workerMessage();
-			}
-			catch{
-				setTimeout(() => {startScanning()}, 10000);
-			}
-			
-			
+			var worker = new Worker("./worker.js");
+			await workerMessage();
+
 		}
 
-		function workerMessage(){
-			let work = new Worker("./worker.js");
-			work.onmessage = (evt) => { 
+
+		async function workerMessage(){
+			worker.onmessage = (evt) => { 
 					document.body.style.backgroundColor = "red";
 					if(evt.data){
 						document.body.style.backgroundColor = "yellow";
