--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
 			document.body.style.backgroundColor = "blue";
 			var worker = new Worker("./worker.js");
-			await workerMessage();
+			workerMessage();
 			
 			
 		}
