Tar bort await (#38)
Co-authored-by: KalleDunderBerg <91466091+BensinBosse@users.noreply.github.com>
Co-authored-by: fluff-otto <91466040+fluff-otto@users.noreply.github.com>
Co-authored-by: BensinBosse <kallehaljerod@gmail.com>

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 	<script type="module" src="js/nfc.js"></script>
 	<script type="module">
 
+
 		import { startScanning } from "./js/nfc.js";
 
 		
@@ -74,7 +75,6 @@
 								};
 							}
 						});
-
 			} else {
 				// If device have no nfc reader or browser does not support NDEFReader
 				document.body.style.backgroundColor = "#0000ff";
@@ -82,8 +82,9 @@
 
 			document.body.style.backgroundColor = "blue";
 			var worker = new Worker("./worker.js");
-			await workerMessage();
-
+			workerMessage();
+			
+			
 		}
 
 
@@ -108,7 +109,6 @@
 					}
 					
 				};
-
 		}
 
 
