evt.data update (#40)
Co-authored-by: KalleDunderBerg <91466091+BensinBosse@users.noreply.github.com>
Co-authored-by: fluff-otto <91466040+fluff-otto@users.noreply.github.com>
Co-authored-by: BensinBosse <kallehaljerod@gmail.com>

--- a/index.html
+++ b/index.html
@@ -92,6 +92,9 @@
 			worker.onmessage = (evt) => { 
 					document.body.style.backgroundColor = "red";
 					if(evt.data){
+
+						console.log(evt.data);
+
 						document.body.style.backgroundColor = "yellow";
 						navigator.permissions.query({name:'nfc'}).then((result) => {
 							document.body.style.backgroundColor = "black";
@@ -109,6 +112,12 @@
 								document.querySelector("#scanButton").onclick = event => {
 									// Prompt user to allow to send and receive info when they tap NFC devices.
 									document.querySelector("#scanButton").style.display = "none";
+
+									if(evt.data === 1){
+										document.body.style.backgroundColor = "green";
+										startScanning();
+									}
+
 									
 								};
 							}
