--- a/index.html
+++ b/index.html
@@ -1,106 +1,61 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <title>Simple PWA</title>
-    <link rel="canonical" href="https://simplepwa.com" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+ <!DOCTYPE html>
+ <html lang="en">
 
-    <!-- Icons and Colors -->
+ <head>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+	<title>Simple PWA</title>
+	<link rel="canonical" href="https://simplepwa.com" />
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	
+	
+	<!-- Icons and Colors -->
 
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
-    <!--<link rel="manifest" href="/site.webmanifest">-->
-    <link rel="manifest" href="manifest.json" />
-    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5" />
-    <meta name="msapplication-TileColor" content="#da532c" />
-    <meta name="theme-color" content="#ffffff" />
 
-    <!-- Styles -->
+	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+	<!--<link rel="manifest" href="/site.webmanifest">-->
+	<link rel="manifest" href="manifest.json">
+	<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+	<meta name="msapplication-TileColor" content="#da532c">
+	<meta name="theme-color" content="#ffffff">
+	
+	
+	
+	<!-- Styles -->
 
-    <link rel="stylesheet" href="css/index.css" />
+	<link rel="stylesheet" href="css/index.css">
 
-    <!-- Javscript -->
-    <script></script>
-    <script defer src="./main.js"></script>
-  </head>
 
-  <body>
-    <h1>hej</h1>
+	<!-- Javscript -->
+	<script>
 
-    <button id="scanButton">Scan</button>
+	</script>
+	<script defer src="./main.js"></script>
+ </head>
 
-    <h2></h2>
+ <body>
+	<h1>hej</h1>
 
-    <script type="module" src="js/nfc.js"></script>
-    <script type="module">
-      import { startScanning } from "./js/nfc.js";
+	<button id = "scanButton">Scan</button>
 
-      if ("serviceWorker" in navigator) {
-        window.addEventListener("load", () => {
-          navigator.serviceWorker &&
-            navigator.serviceWorker.register("./sw.js");
-        });
-      }
+	<h2></h2>
 
-      if (window.Worker) {
-        if ("NDEFReader" in window) {
-          // Look if have permissions for a nfc is granted or not if permissions is not granded make a button that give browser permissions for nfc
-          navigator.permissions.query({ name: "nfc" }).then((result) => {
-            if (result.state === "granted") {
-            } else if (result.state === "prompt") {
-              // Show a scan button.
-              document.querySelector("#scanButton").style.display = "block";
-              document.querySelector("#scanButton").onclick = (event) => {
-                // Prompt user to allow to send and receive info when they tap NFC devices.
-                document.querySelector("#scanButton").style.display = "none";
-              };
-            }
-          });
-        } else {
-          // If device have no nfc reader or browser does not support NDEFReader
-          document.body.style.backgroundColor = "#0000ff";
-        }
+	<script src="js/nfc.js"></script>
+	<script>
 
-        document.body.style.backgroundColor = "blue";
-        var worker = new Worker("./worker.js");
-        workerMessage();
-      }
+		
 
-      async function workerMessage() {
-        worker.onmessage = (evt) => {
-          document.body.style.backgroundColor = "red";
-          if (evt.data) {
-            console.log(evt.data);
+		if ("serviceWorker" in navigator) {
+			window.addEventListener("load", () => {
+				navigator.serviceWorker && navigator.serviceWorker.register("./sw.js");
+			});
 
-            document.body.style.backgroundColor = "yellow";
-            navigator.permissions.query({ name: "nfc" }).then((result) => {
-              document.body.style.backgroundColor = "black";
-              //   if (result.state === "granted") {
-              //     document.body.style.backgroundColor = "white";
-              if (evt.data === 1) {
-                document.body.style.backgroundColor = "green";
-                startScanning();
-                // }
-              } else if (result.state === "prompt") {
-                // Show a scan button.
-                document.querySelector("#scanButton").style.display = "block";
-                document.querySelector("#scanButton").onclick = (event) => {
-                  // Prompt user to allow to send and receive info when they tap NFC devices.
-                  document.querySelector("#scanButton").style.display = "none";
+			
+		}
 
-                  if (evt.data === 1) {
-                    document.body.style.backgroundColor = "green";
-                    startScanning();
-                  }
-                };
-              }
-            });
-          }
-        };
-      }
-    </script>
-  </body>
-</html>
+	</script>
+ </body>
+
+ </html>
