--- a/index.html
+++ b/index.html
@@ -42,7 +42,10 @@
 
 	<h2></h2>
 
-	<script src="js/nfc.js"></script>
+	<h3></h3>
+
+	<script src="js/scripts.js"></script>
+	<!--<script src="js/nfc.js"></script>-->
 	<script>
 
 		
