Skrev om onmessage

--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
 
 	<h3></h3>
 
-	<script src="js/scripts.js"></script>
-	<!--<script src="js/nfc.js"></script>-->
+	<!--<script src="js/scripts.js"></script>-->
+	<script src="js/nfc.js"></script>
 	<script>
 
 		
