--- a/index.html
+++ b/index.html
@@ -1,64 +1,56 @@
- <!DOCTYPE html>
- <html lang="en">
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    <title>Simple PWA</title>
+    <link rel="canonical" href="https://simplepwa.com" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
- <head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-	<title>Simple PWA</title>
-	<link rel="canonical" href="https://simplepwa.com" />
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	
-	
-	<!-- Icons and Colors -->
+    <!-- Icons and Colors -->
 
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <!--<link rel="manifest" href="/site.webmanifest">-->
+    <link rel="manifest" href="manifest.json" />
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5" />
+    <meta name="msapplication-TileColor" content="#da532c" />
+    <meta name="theme-color" content="#ffffff" />
 
-	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-	<!--<link rel="manifest" href="/site.webmanifest">-->
-	<link rel="manifest" href="manifest.json">
-	<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
-	<meta name="msapplication-TileColor" content="#da532c">
-	<meta name="theme-color" content="#ffffff">
-	
-	
-	
-	<!-- Styles -->
+    <!-- Styles -->
 
-	<link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/index.css" />
 
+    <!-- Javscript -->
+    <script></script>
+    <script defer src="./main.js"></script>
+  </head>
 
-	<!-- Javscript -->
-	<script>
+  <body>
+    <h1>hej</h1>
 
-	</script>
-	<script defer src="./main.js"></script>
- </head>
+    <button id="scanButton">Scan</button>
 
- <body>
-	<h1>hej</h1>
+    <h2></h2>
 
-	<button id = "scanButton">Scan</button>
+    <h3></h3>
 
-	<h2></h2>
+    <!-- För att hämta Fruit-data -->
+    <button id="fruit-btn">Fruit</button>
 
-	<h3></h3>
+    <!-- Här sker hämtningen av Fruit-data när knappen klickas -->
+    <script src="request.js"></script>
 
-	<!--<script src="js/scripts.js"></script>-->
-	<script src="js/nfc.js"></script>
-	<script>
-
-		
-
-		if ("serviceWorker" in navigator) {
-			window.addEventListener("load", () => {
-				navigator.serviceWorker && navigator.serviceWorker.register("./sw.js");
-			});
-
-			
-		}
-
-	</script>
- </body>
-
- </html>
+    <!--<script src="js/scripts.js"></script>-->
+    <script src="js/nfc.js"></script>
+    <script>
+      if ("serviceWorker" in navigator) {
+        window.addEventListener("load", () => {
+          navigator.serviceWorker &&
+            navigator.serviceWorker.register("./sw.js");
+        });
+      }
+    </script>
+  </body>
+</html>
