--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 
     <!-- Icons and Colors -->
 
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="image/icons/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="image/icons/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="image/icons/favicon-16x16.png" />
     <!--<link rel="manifest" href="/site.webmanifest">-->
     <link rel="manifest" href="manifest.json" />
-    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5" />
+    <link rel="mask-icon" href="image/icons/safari-pinned-tab.svg" color="#5bbad5" />
     <meta name="msapplication-TileColor" content="#da532c" />
     <meta name="theme-color" content="#ffffff" />
 
@@ -24,7 +24,7 @@
 
     <!-- Javscript -->
     <script></script>
-    <script defer src="./main.js"></script>
+    <script defer src="js/main.js"></script>
   </head>
 
   <body>
@@ -42,7 +42,6 @@
     <!-- Här sker hämtningen av Fruit-data när knappen klickas -->
     <script src="request.js"></script>
 
-    <!--<script src="js/scripts.js"></script>-->
     <script src="js/nfc.js"></script>
     <script>
       if ("serviceWorker" in navigator) {
