Skrev kommentar resolve #11

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Learn OL</title>
     <link rel="canonical" href="https://learnol.com" />
 
+    <!-- Facebook Open Graph -->
     <meta property="fb:app_id" content="123456789">
     <meta property="og:url" content="https://learnol.com">
     <meta property="og:type" content="website">
