--- a/index.html
+++ b/index.html
@@ -20,12 +20,30 @@
 
     <!-- Icons and Colors -->
 
-    <link rel="apple-touch-icon" sizes="180x180" href="image/icons/apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="image/icons/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="image/icons/favicon-16x16.png" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="image/icons/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="image/icons/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="image/icons/favicon-16x16.png"
+    />
     <!--<link rel="manifest" href="/site.webmanifest">-->
     <link rel="manifest" href="manifest.json" />
-    <link rel="mask-icon" href="image/icons/safari-pinned-tab.svg" color="#5bbad5" />
+    <link
+      rel="mask-icon"
+      href="image/icons/safari-pinned-tab.svg"
+      color="#5bbad5"
+    />
     <meta name="msapplication-TileColor" content="#da532c" />
     <meta name="theme-color" content="#ffffff" />
 
@@ -73,6 +91,8 @@
       <h1 class="title">Footer</h1>
     </footer>
 
+
+    <p id="api-content">Empty</p>
 
     <!-- Här sker hämtningen av Fruit-data när knappen klickas -->
     <script src="request.js"></script>
