Fixade med layout

--- a/index.html
+++ b/index.html
@@ -64,33 +64,47 @@
   <body>
     
     <main class="container">
-      <header class="content headers">
-
-        <h1 class="title">Learn OL</h1>
-  
-      </header>
 
       <section class="content info">
-
-          <h1 class="nfc-info title">hej</h1>
+        <!--<footer>
+          <h1>Footer</h1>
+        </footer>-->
+          <h1 class="nfc-info"></h1>
 
           <button id="scanButton">Scan</button>
 
-          <h2 class="nfc-output subheading">SHDhhhhjjkIUHFIUHDUIHFUDH</h2>
+          <h2 class="nfc-output"></h2>
 
-          <h3></h3>
+          <h1 class="nfc-info">Learn OL</h1>
 
           <!-- För att hämta Fruit-data -->
           <button id="fruit-btn">Fruit</button>
 
       </section>
+
+      <section class="content info2">
+        <h1 class="nfc-info">hej</h1>
+
+        <button id="scanButton">Scan</button>
+
+        <h2 class="nfc-output">SHDhhhhjjkIUHFIUHDUIHFUDH</h2>
+
+        <!-- För att hämta Fruit-data -->
+        <button id="fruit-btn">Fruit</button>
+      </section>
+
+      <section class="content info3">
+        <h1 class="nfc-info">hej</h1>
+
+        <button id="scanButton">Scan</button>
+
+        <h2 class="nfc-output">SHDhhhhjjkIUHFIUHDUIHFUDH</h2>
+
+        <!-- För att hämta Fruit-data -->
+        <button id="fruit-btn">Fruit</button>
+      </section>
       
     </main>
-
-    <footer class="container">
-      <h1 class="title">Footer</h1>
-    </footer>
-
 
     <p id="api-content">Empty</p>
 
