--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
   </head>
 
-  <body>
+  <body >
     
     <main class="container">
 
@@ -82,14 +82,14 @@
 
       </section>
 
-      <section class="content info2">
+      <!--<section class="content info2">
         <h1 class="nfc-info">hej</h1>
 
         <button id="scanButton">Scan</button>
 
-        <h2 class="nfc-output">SHDhhhhjjkIUHFIUHDUIHFUDH</h2>
+        <h2 class="nfc-output">Underrubrik</h2>
 
-        <!-- För att hämta Fruit-data -->
+        <För att hämta Fruit-data >
         <button id="fruit-btn">Fruit</button>
       </section>
 
@@ -100,9 +100,20 @@
 
         <h2 class="nfc-output">SHDhhhhjjkIUHFIUHDUIHFUDH</h2>
 
-        <!-- För att hämta Fruit-data -->
+        <För att hämta Fruit-data >
         <button id="fruit-btn">Fruit</button>
       </section>
+
+      <section class="content info4">
+        <h1 class="nfc-info">hej</h1>
+
+        <button id="scanButton">Scan</button>
+
+        <h2 class="nfc-output">SHDhhhhjjkIUHFIUHDUIHFUDH</h2>
+
+        <För att hämta Fruit-data >
+        <button id="fruit-btn">Fruit</button>
+      </section>-->
       
     </main>
 
