--- a/index.html
+++ b/index.html
@@ -8,15 +8,18 @@
     <link rel="canonical" href="https://learnol.com" />
 
     <!-- Facebook Open Graph -->
-    <meta property="fb:app_id" content="123456789">
-    <meta property="og:url" content="https://learnol.com">
-    <meta property="og:type" content="website">
-    <meta property="og:image" content="image/icons/android-chrome-192x192.png">
-    <meta property="og:image:alt" content="Hemsida logotypt">
-    <meta property="og:site_name" content="Learn OL">
-    <meta property="og:locale" content="sv">
+    <meta property="fb:app_id" content="123456789" />
+    <meta property="og:url" content="https://learnol.com" />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:image"
+      content="image/icons/android-chrome-192x192.png"
+    />
+    <meta property="og:image:alt" content="Hemsida logotypt" />
+    <meta property="og:site_name" content="Learn OL" />
+    <meta property="og:locale" content="sv" />
 
-    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="mobile-web-app-capable" content="yes" />
 
     <!-- Icons and Colors -->
 
@@ -47,18 +50,19 @@
     <meta name="msapplication-TileColor" content="#da532c" />
     <meta name="theme-color" content="#ffffff" />
 
-    <meta name="msapplication-config" content="/browserconfig.xml">
+    <meta name="msapplication-config" content="/browserconfig.xml" />
 
     <!-- Styles -->
 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/jgthms/minireset.css@master/minireset.min.css">
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/gh/jgthms/minireset.css@master/minireset.min.css"
+    />
     <link rel="stylesheet" href="css/index.css" />
-    
 
     <!-- Javscript -->
     <script></script>
     <script defer src="js/main.js"></script>
-
   </head>
 
   <body>
@@ -77,8 +81,6 @@
 
     <!-- För att hämta Fruit-data -->
     <button id="fruit-btn">Se Fruit</button>
-
-    <p id="api-content">Empty</p>
 
     <p id="api-content">Empty</p>
 
