--- a/index.html
+++ b/index.html
@@ -8,15 +8,18 @@
     <link rel="canonical" href="https://learnol.com" />
 
     <!-- Facebook Open Graph -->
-    <meta property="fb:app_id" content="123456789">
-    <meta property="og:url" content="https://learnol.com">
-    <meta property="og:type" content="website">
-    <meta property="og:image" content="image/icons/android-chrome-192x192.png">
-    <meta property="og:image:alt" content="Hemsida logotypt">
-    <meta property="og:site_name" content="Learn OL">
-    <meta property="og:locale" content="sv">
+    <meta property="fb:app_id" content="123456789" />
+    <meta property="og:url" content="https://learnol.com" />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:image"
+      content="image/icons/android-chrome-192x192.png"
+    />
+    <meta property="og:image:alt" content="Hemsida logotypt" />
+    <meta property="og:site_name" content="Learn OL" />
+    <meta property="og:locale" content="sv" />
 
-    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="mobile-web-app-capable" content="yes" />
 
     <!-- Icons and Colors -->
 
@@ -47,45 +50,54 @@
     <meta name="msapplication-TileColor" content="#da532c" />
     <meta name="theme-color" content="#ffffff" />
 
-    <meta name="msapplication-config" content="/browserconfig.xml">
+    <meta name="msapplication-config" content="/browserconfig.xml" />
 
     <!-- Styles -->
-
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/jgthms/minireset.css@master/minireset.min.css">
     <link rel="stylesheet" href="css/index.css" />
-    
-
-    <!-- Javscript -->
-    <script></script>
-    <script defer src="js/main.js"></script>
-
   </head>
 
   <body>
-    <h1>hej</h1>
+    <main>
+      <h1>hej</h1>
+      <button id="scanButton">Scan</button>
+      <h2></h2>
+      <h3></h3>
 
-    <button id="scanButton">Scan</button>
+      <!-- För att gå till inställningar för användaren -->
+      <!-- <button onclick="window.location.href = '/settings.html'" id="settings-btn">
+      Gå till settings
+    </button> -->
 
-    <h2></h2>
+      <!-- För att hämta Fruit-data -->
+      <button id="fruit-btn">Se Fruit</button>
+      <button id="put-btn">Put</button>
 
-    <h3></h3>
+      <div class="form">
+        <form>
+          <input type="checkbox" id="is-primary" />
+          <input type="text" placeholder="Page name" id="page-input" />
+          <input type="text" placeholder="Card ID" id="id-input" />
+        </form>
+        <button id="send-btn">Send</button>
+      </div>
 
-    <!-- För att hämta Fruit-data -->
-    <button id="fruit-btn">Fruit</button>
-
-    <p id="api-content">Empty</p>
-
-    <!-- Här sker hämtningen av Fruit-data när knappen klickas -->
+      <p id="api-content"></p>
+    </main>
+    <!-- For API-requests -->
     <script src="request.js"></script>
 
+    <!-- Other JavaScript -->
+    <script defer src="js/main.js"></script>
     <script src="js/nfc.js"></script>
+
+    <!-- Service Worker -->
     <script>
-      if ("serviceWorker" in navigator) {
-        window.addEventListener("load", () => {
-          navigator.serviceWorker &&
-            navigator.serviceWorker.register("./sw.js");
-        });
-      }
+      // if ("serviceWorker" in navigator) {
+      //   window.addEventListener("load", () => {
+      //     navigator.serviceWorker &&
+      //       navigator.serviceWorker.register("./sw.js");
+      //   });
+      // }
     </script>
   </body>
 </html>
