Skicka serialnumber från NFC tagg

--- a/index.html
+++ b/index.html
@@ -84,10 +84,10 @@
       <p id="api-content"></p>
     </main>
     <!-- For API-requests -->
-    <script src="request.js"></script>
+    <script type="module" src="request.js"></script>
 
     <!-- Other JavaScript -->
-    <script defer src="js/main.js"></script>
+    <script type="module" src="js/main.js"></script>
     <script src="js/nfc.js"></script>
 
     <!-- Service Worker -->
