Ändrar index.scss

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
   <body>
     <main>
-      <div>
+      <div class="content">
       <h1>Welcome to Project Bord!</h1>
 
       <h1>Välkommen till Learn OL!</h1>
@@ -90,9 +90,9 @@
     </main>
 
 
-    <main class="content">
+    <main class="conterner">
 
-      <h1>hej</h1>
+      <h1>Hej</h1>
       <button id="scanButton">Scan</button>
       <h2></h2>
       <h3></h3>
