--- a/index.html
+++ b/index.html
@@ -57,7 +57,11 @@
   </head>
 
   <body>
+      <a class="settings" href="https://github.com/orgs/tcstenungsund/projects/1/views/1"><img class="settings-icon" src="image/gear.png" alt=""></a>
+
     <main>
+
+      
       <div class="content">
       <h1>Welcome to Project Bord!</h1>
 
