layout och button för att visa olika sidor

--- a/index.html
+++ b/index.html
@@ -121,11 +121,9 @@
     </main>
     </div>
 
-    <!--<div id="layout-start">
-    <p id="api-content" class="nfc-output">Empty</p>
-
+    <div id="layout-start">
       <a class="settings" href="https://github.com/orgs/tcstenungsund/projects/1/views/1"><img class="settings-icon" src="image/gear.png" alt=""></a>
-
+      <button class="settings-btn"></button>
     <main>
 
       
@@ -157,7 +155,9 @@
       Gå till settings
     </button> -->
 
-      <!-- För att hämta Fruit-data --
+    <p id="api-content" class="nfc-output">Empty</p>
+
+      <!-- För att hämta Fruit-data -->
     </main>
 
 
