--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 
       
       <!-- <p>To see Molekylverkstan, click <a href="/molekylverkstan">here</a></p>
-      <p>To see Fruit, click <a href="/fruit">here</a></p> --
+      <p>To see Fruit, click <a href="/fruit">here</a></p> -->
       
       <h2>Enter user code:</h2>
       <form>
@@ -154,8 +154,6 @@
       <!-- <button onclick="window.location.href = '/settings.html'" id="settings-btn">
       Gå till settings
     </button> -->
-
-    <p id="api-content" class="nfc-output">Empty</p>
 
       <!-- För att hämta Fruit-data -->
     </main>
@@ -179,6 +177,8 @@
         </form>
         <button id="send-btn">Send</button>
       </div>
+
+      <p id="api-content" class="nfc-output">Empty</p>
 
       <p id="api-content"></p>
     </main>
