--- a/index.html
+++ b/index.html
@@ -63,6 +63,8 @@
       ><img class="settings-icon" src="image/gear.png" alt=""
     /></a>
 
+    <button class="settings" id="refresh-btn">Refresh</button>
+    
     <main>
       <div class="content">
         <h1>Welcome to Project Bord!</h1>
@@ -86,6 +88,7 @@
           <a href="localhost:8080/fruit">Fruit</a>
         </p>
       </div>
+      
       <!-- För att gå till inställningar för användaren -->
       <!-- <button onclick="window.location.href = '/settings.html'" id="settings-btn">
       Gå till settings
