--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 
     <!-- Other JavaScript -->
     <script type="module" src="js/main.js"></script>
-    <script src="js/nfc.js"></script>
+    <script type="module" src="js/nfc.js"></script>
 
     <!-- Service Worker -->
     <script>
