--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
     </div>
 
     <div id="layout-start">
-      <a class="settings" href="https://github.com/orgs/tcstenungsund/projects/1/views/1"><img class="settings-icon" src="image/gear.png" alt=""></a>
+      <a class="settings" href="./settings.html"><img class="settings-icon" src="image/gear.png" alt=""></a>
       <button class="settings-btn"></button>
     <main>
       <div class="content">
