Updated settings.html and the css file
Updated settings.html and the index.css file with the correct colour scheme

--- a/settings.html
+++ b/settings.html
@@ -48,8 +48,7 @@
       <div id="layout-settings">
         <h1 class="firstHeader">Inställningar</h1> 
         
-      <main class="container">  
-        <h2 class="secondHeader">Project Air</h2>
+      <div class="container">  
           <h3 class ="thirdHeader">Startsida Air</h3>
             <div class="buttons1">
               <button class="firstCard">Primärt kort</button>
@@ -83,7 +82,7 @@
               <button class="firstCard">Primärt kort</button>
               <button class="secondCard">Sekundärt kort</button>
             </div>
-      </main>
+          </div>
       </div>
 
     </body>
