--- a/index.html
+++ b/index.html
@@ -57,36 +57,39 @@
   </head>
 
   <body>
+    <!--
     <a
-      class="settings"
-      href="https://github.com/orgs/tcstenungsund/projects/1/views/1"
-      ><img class="settings-icon" src="image/gear.png" alt=""
-    /></a>
+    class="settings"
+      href="https://github.com/orgs/tcstenungsund/projects/1/views/1">
+      <img class="settings-icon" src="image/gear.png" alt=""
+    /></a>-->
 
-    <button class="settings" id="refresh-btn">Refresh</button>
+    <!--<button class="settings" id="refresh-btn">Refresh</button>-->
 
     <main>
       <div class="content">
-        <h1>Welcome to Project Bord!</h1>
-
-        <h1>Välkommen till Learn OL!</h1>
+        <h1>Learn OL</h1>
 
         <!-- <p>To see Molekylverkstan, click <a href="/molekylverkstan">here</a></p>
       <p>To see Fruit, click <a href="/fruit">here</a></p> -->
 
-        <h2>Enter user code:</h2>
-        <form>
-          <input type="text" placeholder="User Code" id="inputBox" />
-          <input type="submit" value="Send" id="sendBtn" onclick="login()" />
+        <h2>Enter Username:</h2>
+        <form class="login">
+          <input type="text" placeholder="Username" id="inputBox" />
+          <input type="submit" value="Login" id="sendBtn" onclick="login()" />
         </form>
+
         <p>
+          Contact <a href="url">0709483756</a>
+        </p>
+        <!--<p>
           Klicka för att gå till
           <a href="localhost:8080/molekylverkstan">Molekylverkstan</a>
         </p>
         <p>
           Klicka för att gå till
           <a href="localhost:8080/fruit">Fruit</a>
-        </p>
+        </p>-->
       </div>
 
       <!-- För att gå till inställningar för användaren -->
@@ -97,7 +100,7 @@
       <!-- För att hämta Fruit-data -->
     </main>
 
-    <main class="conterner">
+    <!--<main class="conterner">
       <h1>Hej</h1>
       <button id="scanButton">Scan</button>
       <h2></h2>
@@ -118,6 +121,7 @@
 
       <p id="api-content"></p>
     </main>
+  -->
 
     <!-- For API-requests -->
     <script type="module" src="request.js"></script>
